# ndvi-project

./: .gitignore  README.md  README_Flask.md  app.py  pyproject.toml  render.yaml  requirements.txt
Backup/: app1.py  app2.py  app3.py
Backup/templates1/: index.html  ndvi_map.html
Backup/templates2/: ndvi_map.html
Backup/templates3/: ndvi_map.html
app/: __init__.py  main.py
app/api/: __init__.py  ndvi_routes.py
app/core/: __init__.py  config.py
app/models/: __init__.py
app/services/: __init__.py  ndvi_service.py
static/: india_district_boundaries.geojson  style.css
templates/: index.html  ndvi_map.html
tests/: test_earth_engine_init.py
