[project]
name = "ndvi-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "earthengine-api>=0.1.390",
    "fastapi[standard]>=0.128.0",
    "geopy>=2.4.1",
    "rasterio>=1.3.0",
    "shapely>=2.0.0",
    "uvicorn>=0.27.0",
]
